<resources>
    <string name="app_name">Discount One</string>
    <string name="privacy_policy_link">https://discount.one/privacy-policy</string>
    <string name="terms_of_use_link">https://discount.one/terms-of-use</string>
    <string name="affiliate_disclosure_link">https://discount.one/affiliate-disclosure</string>

    <string name="facebook_app_id">3289462238010315</string>
    <string name="facebook_client_token">2a38aa3c69151c843938d9d25591ba53</string>
    <string name="default_notification_channel_id">discount_one_fcm_channel</string>
    <string name="default_notification_channel_name" translatable="true">Discount One special notifications</string>

    <string name="nav_home">Home</string>
    <string name="nav_discounts">Discounts</string>
    <string name="nav_deals">All Deals</string>
    <string name="nav_shops">Stores</string>
    <string name="nav_coupons">Coupons</string>
    <string name="nav_categories">Categories</string>

    <string name="error_restore">Cann\'t restore your purchase</string>
    <string name="restore_successfully">Restore successfully</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="copied">Copied to clipboard</string>
    <string name="added_to_bookmarks">Added to wishlist</string>
    <string name="removed_from_bookmarks">Removed from wishlist</string>
    <string name="incorrect_link_message">An error occurred opening the link. Please try again later or report the problem to the Helpdesk.</string>
    <string name="search_by_deals">Search deals</string>
    <string name="search_by_coupons">Search by coupons</string>
    <string name="search_by_categories">Search by categories</string>
    <string name="search_by_shops">Search by stores</string>
    <string name="empty_search_result">Nothing found for your search</string>
    <string name="deal_type">Deal Type</string>
    <string name="sort_by">Sort by</string>
    <string name="empty_sorting_result"><b>Deals not found. Try other filter settings.</b></string>
    <string name="toast_bookmark">You must be logged in to add bookmark</string>
    <string name="share_text">Look what I found in DiscouneOne %s</string>
    <string name="trow_off">Trow off</string>
    <string name="apply">Apply</string>
    <string name="sign_up_promotion">Want to receive exclusive, limited-time deals with huge discounts in categories that interest you?</string>
    <string name="go_login">Go to Sign Up</string>
    <string name="sign_up">Sign Up</string>

    <!-- Wildcard strings -->
    <string name="price_wildcard">₹%d</string>
    <string name="price_wildcard_with_discount_value">₹%s (%d%%)</string>
    <string name="published_date">Updated: %1$s</string>

    <!-- Permission -->

    <string name="save_file_permission_error">To download a file, you must obtain permission to write to the phone storage.</string>
    <string name="image_picker_permission_error">To set image profile, you must obtain permission to read to the phone storage.</string>

    <!-- Notifications -->
    <string name="notifications_time_now">now</string>
    <string name="notifications_time_yesterday">yesterday</string>
    <string name="notifications_time_minute">minute</string>
    <string name="notifications_time_hour">hour</string>

    <!-- Start -->
    <string name="fr_start_title">Unlock access to exclusive, limited-time deals with huge discounts in categories that interest you!</string>
    <string name="sign_in">Sign In</string>

    <!-- New account -->
    <string name="new_account">New Account</string>
    <string name="send_email">We will send you an email to confirm your registration.</string>
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_info">The password must be at least six characters long. It must contain at least one capital letter and one number.</string>
    <string name="password_error">The password must be at least six characters long. It must contain at least one capital letter and one number.</string>
    <string name="create_new_account">Create new account</string>
    <string name="agree_text">I am agree with the personal data processing policy and the rules for using the service.</string>

    <!-- Log In -->
    <string name="log_in_title">My account</string>
    <string name="log_in_error">Incorrect email or password. Please verify your information and try again</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Forgot password -->
    <string name="forgot_pass_title">Forgot Password?</string>
    <string name="forgot_pass_description">Enter the email that you used when register to recover your password. You will receive a password reset link.</string>
    <string name="send_reset_instruction">Send Reset instructions</string>

    <!-- Recovery password -->
    <string name="recovery_pass_title">We\'ve sent you an email with a link to reset your password</string>
    <string name="recovery_pass_description">Check your spam and promotions folder if it doesn\'t appear in your main mailbox</string>
    <string name="btn_go_to_sign_in">Back to Sign In</string>
    <string name="btn_resend_email">Didn\'t receive the email?</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_new_password">Enter a new password</string>
    <string name="error_password_repeat">Passwords don\'t match</string>
    <string name="reset">Reset</string>

    <!-- Additional info -->
    <string name="additional_information_title">Additional Information</string>
    <string name="additional_information_description">The insights from this data will enable us to create more personalized and targeted offers for you.</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="city">City</string>
    <string name="btn_continue">Continue</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="personal_data">Personal data</string>
    <string name="wishlist">Wishlist</string>
    <string name="subscription">Subscription preferences</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="conditions_of_use">Conditions of use</string>
    <string name="affiliate_disclosure">Affiliate Disclosure</string>
    <string name="theme">Theme</string>
    <string name="log_out">Sign out</string>

    <!-- Profile Data-->
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_registration">Date of registration: %s</string>
    <string name="profile_photo_loading">Wait for the profile photo loading</string>

    <!-- Fragment Home-->
    <string name="fr_home_discounts">Discounts</string>
    <string name="fr_home_coupons">Coupons</string>
    <string name="fr_home_finance">Finance</string>
    <string name="fr_home_stores">Stores</string>

    <!-- Fragment Discounts-->
    <string name="fr_discount_title">Discounts</string>

    <!-- Fragment Categories-->
    <string name="fr_cat_title">Categories</string>
    <string name="fr_cat_publications">%d publications</string>

    <!-- Fragment Best deals-->
    <string name="fr_deals_title">All Deals</string>
    <string name="fr_deals_filter_categories">Categories</string>
    <string name="fr_deals_filter_shops">Stores</string>
    <string name="fr_deals_sorting_price">Price</string>
    <string name="fr_deals_sorting_discount">Discount</string>
    <string-array name="fr_deals_sorting_type">
        <item>New deals</item>
        <item>Most popular</item>
        <item>High discount</item>
        <item>Price (low-high)</item>
        <item>Price (high-low)</item>
    </string-array>
    <string-array name="fr_coupons_sorting_type">
        <item>New deals</item>
        <item>Most popular</item>
    </string-array>
    <string-array name="fr_deals_type">
        <item>All</item>
        <item>Discounts</item>
        <item>Coupons</item>
    </string-array>

    <!-- Bottom Sheet Fragment Discount-->
    <string name="from_percent">From, %</string>
    <string name="to_percent">To, %</string>

    <!-- Bottom Sheet Fragment Price-->
    <string name="from_price">From, ₹</string>
    <string name="to_price">To, ₹</string>
    <string name="fr_price_title">Price</string>

    <!-- Fragment Shops-->
    <string name="fr_shops_title">Stores</string>

    <!-- Fragment Coupons-->
    <string name="fr_coupons_title">Coupons</string>

    <!-- Fragment Deal-->
    <string name="fr_deal_add_to_bookmarks">Add to wishlist</string>
    <string name="fr_deal_remove_from_bookmarks">Remove from wishlist</string>
    <string name="fr_deal_published">Updated: %s</string>
    <string name="fr_deal_more_about_discount">Product Information</string>
    <string name="fr_deal_disclosure">Disclosure: If you follow a link or buy an item from a post, Discount One may receive a commission from the store, but this does not affect what discounts are posted on the site. \n<u>Affiliate Disclosure</u></string>
    <string name="fr_deal_price_chart">Price Change Chart</string>
    <string name="fr_deal_similar_deals">Other deals from</string>
    <string name="fr_deal_daily_top">Daily Top</string>
    <string name="fr_deal_similar_more_deals">More deals</string>
    <string name="shop_now">SEE MORE</string>
    <string name="get_coupon">GET COUPON</string>
    <string name="activate_coupon">Activate Coupon</string>
    <string name="get_deal">Get Deal</string>

    <!-- Fragment Wishlist-->
    <string name="fr_wishlist_title">Wishlist</string>
    <string name="fr_wishlist_empty">You haven\'t added any offers to your Wishlist yet.</string>
    <string name="fr_wishlist_unauthorized">To add a product to your wishlist please log in or register.</string>

    <!-- Fragment Notifications-->
    <string name="fr_notifications_title">Notifications</string>
    <string name="fr_notifications_today">Today</string>
    <string name="fr_notifications_other_days">Previously</string>
    <string name="fr_notifications_clear">Clear all notifications?</string>

    <!-- Fragment Subscription-->
    <string name="fr_subscription_description">Please choose categories you are interested in to receive only useful newsletters from us</string>
    <string name="fr_subscription_email_notification_title">E-mail notifications settings</string>
    <string name="fr_subscription_email_notification">Receive useful newsletters about new discounts and deals</string>
    <string name="fr_subscription_successfully_saved">Successfully saved</string>

</resources>