<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvSignIn"
        style="@style/TextRegular.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recovery_pass_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/TextRegular.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_12dp"
        android:text="@string/recovery_pass_description"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToLogin"
        style="@style/ButtonColored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:text="@string/btn_go_to_sign_in"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResendEmail"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_resend_email"
        android:layout_marginTop="@dimen/common_offset_8dp"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>