<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvSignIn"
        style="@style/TextRegular.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_offset_32dp"
        android:text="@string/new_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/TextRegular.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_12dp"
        android:text="@string/send_email"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:hint="@string/your_name"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@.-_"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordInfo"
        style="@style/TextRegular.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_8dp"
        android:text="@string/password_info"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:id="@+id/tvPasswordError"
        style="@style/TextRegular.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_8dp"
        android:text="@string/password_error"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_16dp"
        android:layout_marginStart="@dimen/common_offset_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordInfo" />

    <TextView
        android:id="@+id/tvAgree"
        style="@style/TextRegular.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_offset_32dp"
        android:text="@string/agree_text"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/cbAgree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cbAgree"
        app:layout_constraintBottom_toBottomOf="@id/cbAgree" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/ButtonColored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:enabled="false"
        android:text="@string/create_new_account"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintTop_toBottomOf="@id/tvAgree" />

</androidx.constraintlayout.widget.ConstraintLayout>