<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextRegular.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:text="@string/log_in_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordError"
        style="@style/TextRegular.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_8dp"
        android:text="@string/log_in_error"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/TextRegular.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_offset_32dp"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/common_textSize_14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordError" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/ButtonColored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_24dp"
        android:enabled="false"
        android:text="@string/sign_in"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_8dp"
        android:text="@string/create_new_account"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/common_offset_8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>